
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int inotify_init () ;
 int pipe (int*) ;

int main(int argc, char *argv[])
{
        int fds[2];


        while (pipe(fds) != -1)
                ;

        while (1)
                inotify_init();

        return 0;
}
